# HFTExperiment

./: .env.example  .gitignore  Dockerfile  FINAL_MODEL_REPORT_09052026.md  IMPROVEMENTS.md  LITERATURE_REVIEW.md  Makefile  PAPER_TRADE_UPDATE_09052026.md  PATCH3_NOTES.md  PATCH_NOTES.md  PATCH_NOTES_PHASE4_27042026.md  PATCH_NOTES_PHASE5_29042026.md  PATCH_NOTES_PHASE6_03052026.md  PATCH_NOTES_PHASE7_05052026.md  PATCH_NOTES_PHASE8_VERDICT_06052026.md  PATCH_NOTES_SYNTHESIS_TRAINING_REPORT_08052026.md  README.md  RESEARCH_CEILING_ANALYSIS.md  STANDBY_PATCH_NOTES_05052026.md  STEP_BY_STEP.md  SYNTHESIS_PAPERS_PHASE4_11052026.md  SYNTHESIS_PAPERS_PHASE4_13052026.md  SYNTHESIS_PAPERS_PHASE4_29042026.md  SYNTHESIS_PAPERS_PHASE9_08052026.md  TRAINING_REPORT.md  TRAINING_REPORT_26042026.md  TRAINING_REPORT_PHASE4.md  WEEK1_REPORT_AND_NEXT_STEPS.md  experiment.ipynb  pyproject.toml  requirements-gpu.txt  requirements-research.txt  requirements-ta.txt  requirements.txt  run_train.bat  run_train.ps1
configs/: config.yaml  sweep.yaml
configs/data/: xauusd.yaml
configs/deployment/: production.yaml
configs/model/: dual_branch.yaml
configs/rl/: sac.yaml
notebooks/: phase4_feature_exploration (4).ipynb  phase4_feature_exploration.ipynb  phase6_feature_exploration.ipynb  phase7_signal_quality_lab.ipynb  phase7v2_signal_quality_lab.ipynb  phase8_label_validation.ipynb
scripts/: backtest.py  download_data.py  ingest_histdata.py  paper_trade.py  precompute_features.py  scrape_ft.py  train_rl.py  train_supervised.py
tests/: test_core.py
workflows/: ci.yml
(+26 files in other folders)
